# card_benchmark

./: .gitignore  Dockerfile  readme.md
bench_cases/: shell.nix
bench_cases/loadtest/: .dockerignore  Cargo.toml  Dockerfile
bench_cases/loadtest/src/: main.rs
roda/: app.rb
roda_clickhouse/: Dockerfile  Gemfile  Rakefile  clickhouse.rb  config.ru  database.rb  dip.yml  docker-compose.yml
roda_clickhouse/clickhouse/: Dockerfile  docker_related_config.xml
roda_clickhouse/config/: clickhouse.xml
roda_clickhouse/db/: seeds.rb
roda_clickhouse/db/migrations/: 20200902180555_init.rb  schema.sql
roda_clickhouse/models/: debit_card.rb  user.rb
roda_clickhouse_materialized/: Gemfile  Rakefile  app.rb  clickhouse.rb  config.ru  docker-compose.yml
roda_clickhouse_materialized/models/: user.rb
roda_index/: Gemfile  app.rb  docker-compose.yml
roda_index/db/migrations/: 20200902180555_init.rb  schema.sql
roda_index/models/: user.rb
roda_iodine/: Gemfile  app.rb  config.ru  docker-compose.yml
roda_iodine/db/: seeds.rb
roda_iodine/models/: user.rb
roda_not_freeze/: Gemfile  config.ru  docker-compose.yml
roda_not_freeze/models/: credit_card.rb
roda_oj/: Gemfile  app.rb  config.ru  models.rb
sinatra/: Rakefile  app.rb  database.rb
sinatra/db/migrations/: 20200902180555_init.rb  schema.sql
sinatra_oj/: Gemfile  app.rb  config.ru
sinatra_with_logger/: Gemfile  app.rb  docker-compose.yml
sinatra_with_logger/models/: user.rb
