[package]
name = "loadtest"
version = "0.1.0"
authors = ["Aleksandr Kirillov <saratovsource@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
goose = { version = "^0.9", default-features = false, features = ["rustls", "gaggle"] }
rand = "0.7.3"
serde_json = "1.0"
